# anysync

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: check.yml
src/anysync/: __init__.py  _private.py  core.py
tests/: test_anysync.py
